--- a/public/index.html
+++ b/public/index.html
@@ -171,7 +171,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="text" id="mc_unique_promotion_id_online" placeholder="Communication Cell Code" class="slds-input" />
+                        <input type="text" id="mc_unique_promotion_id_online" placeholder="MC Unique Promotion ID" class="slds-input" />
                     </div>
                 </div>
 
