--- a/public/index.html
+++ b/public/index.html
@@ -539,6 +539,7 @@
     <div id="step3" class="step">
 
         <div class="slds-grid slds-gutters">
+            
             <div class="slds-col slds-size_1-of-2">
                 <div class="slds-scoped-notification slds-media slds-media_center slds-scoped-notification_light" role="status">
                     <div class="slds-media__figure">
@@ -569,6 +570,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
 
         <div class="slds-grid slds-gutters">
@@ -582,7 +584,7 @@
                 </div>
             </div>
 
-            <div class="slds-col slds-size_1-of-5">
+            <div class="slds-col slds-size_1-of-5 padding_top_grid">
                 <h2>Online Voucher Setup</h2>
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">MC Unique Promotion ID</span>
