--- a/public/index.html
+++ b/public/index.html
@@ -539,7 +539,7 @@
     <div id="step3" class="step">
 
         <div class="slds-grid slds-gutters">
-            
+
             <div class="slds-col slds-size_1-of-2">
                 <div class="slds-scoped-notification slds-media slds-media_center slds-scoped-notification_light" role="status">
                     <div class="slds-media__figure">
@@ -573,7 +573,7 @@
 
         </div>
 
-        <div class="slds-grid slds-gutters">
+        <div class="slds-grid slds-gutters padding_top_grid">
 
             <div class="slds-col slds-size_1-of-5">
                 <div class="slds-form-element slds-form-element_readonly">
@@ -584,7 +584,7 @@
                 </div>
             </div>
 
-            <div class="slds-col slds-size_1-of-5 padding_top_grid">
+            <div class="slds-col slds-size_1-of-5">
                 <h2>Online Voucher Setup</h2>
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">MC Unique Promotion ID</span>
