FInal markup touches

--- a/public/index.html
+++ b/public/index.html
@@ -540,7 +540,13 @@
 
         <div class="slds-grid slds-gutters">
 
-            <div class="slds-col slds-size_1-of-2">
+            <div class="slds-col slds-size_1-of-5">
+                <div class="slds-form-element slds-form-element_readonly">
+                    <span class="slds-form-element__label">Promotion Type</span>
+                    <div class="slds-form-element__control">
+                        <div class="slds-form-element__static" id="promotion_type_summary"></div>
+                    </div>
+                </div>
                 <div class="slds-scoped-notification slds-media slds-media_center slds-scoped-notification_light" role="status">
                     <div class="slds-media__figure">
                         <span class="slds-icon_container slds-icon-utility-info" title="information">
@@ -554,8 +560,6 @@
                         <p>Your unique Online Promotion Association Key is: <b><span id="onlineKeySummary"></span></b>. Copy this key and use it in the Update Contact widget.</p>
                     </div>
                 </div>
-            </div>
-            <div class="slds-col slds-size_1-of-2">
                 <div class="slds-scoped-notification slds-media slds-media_center slds-scoped-notification_light" role="status">
                     <div class="slds-media__figure">
                         <span class="slds-icon_container slds-icon-utility-info" title="information">
@@ -567,19 +571,6 @@
                     </div>
                     <div class="slds-media__body">
                         <p>Your unique Instore Promotion Association Key is: <b><span id="instoreKeySummary"></span></b>. Copy this key and use it in the Update Contact widget.</p>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-        <div class="slds-grid slds-gutters padding_top_grid">
-
-            <div class="slds-col slds-size_1-of-5">
-                <div class="slds-form-element slds-form-element_readonly">
-                    <span class="slds-form-element__label">Promotion Type</span>
-                    <div class="slds-form-element__control">
-                        <div class="slds-form-element__static" id="promotion_type_summary"></div>
                     </div>
                 </div>
             </div>
@@ -687,7 +678,7 @@
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">Medium Instore</span>
                     <div class="slds-form-element__control">
-                        <div class="slds-form-element__static" id="instant_win_instore_summary"></div>
+                        <div class="slds-form-element__static" id="medium_instore_summary"></div>
                     </div>
                 </div>
                 <div class="slds-form-element slds-form-element_readonly">
