couple of small visual tweaks

--- a/public/index.html
+++ b/public/index.html
@@ -560,7 +560,7 @@
                         <p>Your unique Online Promotion Association Key is: <b><span id="onlineKeySummary"></span></b>. Copy this key and use it in the Update Contact widget.</p>
                     </div>
                 </div>
-                <div class="slds-scoped-notification slds-media slds-media_center slds-scoped-notification_light" role="status">
+                <div class="slds-scoped-notification slds-media slds-media_center slds-scoped-notification_light margin-top-grid" role="status">
                     <div class="slds-media__figure">
                         <span class="slds-icon_container slds-icon-utility-info" title="information">
                             <svg class="slds-icon slds-icon_small slds-icon-text-default" aria-hidden="true">
@@ -576,7 +576,7 @@
             </div>
 
             <div class="slds-col slds-size_1-of-5">
-                <h2>Online Voucher Setup</h2>
+                <h2><b>Online Voucher Setup</b></h2>
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">MC Unique Promotion ID</span>
                     <div class="slds-form-element__control">
@@ -622,7 +622,7 @@
             </div>
 
             <div class="slds-col slds-size_1-of-5">
-                <h2>Online Comms History</h2>
+                <h2><b>Online Comms History</b></h2>
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">Online Communication Cell Code</span>
                     <div class="slds-form-element__control">
@@ -656,7 +656,7 @@
             </div>
 
              <div class="slds-col slds-size_1-of-5">
-                <h2>Instore Voucher Setup</h2>
+                <h2><b>Instore Voucher Setup</b></h2>
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">Communication Cell Code Instore</span>
                     <div class="slds-form-element__control">
@@ -696,7 +696,7 @@
             </div>
 
             <div class="slds-col slds-size_1-of-5">
-                <h2>Instore Comms History</h2>
+                <h2><b>Instore Comms History</b></h2>
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">Instore Communication Cell Code</span>
                     <div class="slds-form-element__control">
